ZOOKEEPER-407. address all findbugs warnings in org.apache.zookeeper.server.quorum.** packages.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/zookeeper/trunk@776826 13f79535-47bb-0310-9956-ffa450edef68